--- a/L6_task1.html
+++ b/L6_task1.html
@@ -41,7 +41,7 @@
 
         }
 
-        .button {
+        .goodButton {
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -53,7 +53,9 @@
 <body>
     <div class="catalog-list"></div>
     <div class="basket-list"></div>
+    <!-- <button class="cart-btn">Очистить корзину</button> -->
     <script>
+        // <input type="button" name="Купить" value="Select" class="button"  onclick="catalog.addGoodToBasket(${catalog.goods.indexOf(good)});">
         const catalogItem = {
             render(good) {
                 return `<div class="good">
@@ -61,10 +63,11 @@
                     <div><b>Цена за шт.</b>: ${good.price}</div>
                     <div><b>Есть на складе</b>: ${good.quantity}</div>
                     <img class="good_img" src="img/pic.jpg" alt="good">
-                    <input type="button" name="Купить" value="Select" class="button"  onclick="catalog.addGoodToBasket(${catalog.goods.indexOf(good)});">
+                    <button class="goodButton" data-id_product="${good.id_product}">В корзину</button>
                 </div>`;
             }
         }
+
         const catalog = {
             catalogListBlock: null,
             catalogItem,
@@ -94,10 +97,17 @@
                     quantity: 3,
                 },
             ],
+
             init() {
                 this.catalogListBlock = document.querySelector('.catalog-list');
                 this.render();
+                this.addEventHandlers();
             },
+
+            addEventHandlers() {
+                this.catalogListBlock.addEventListener('click', event => this.addGoodToBasket(event));
+            },
+
 
             render() {
                 if (this.goods.length) {
@@ -107,19 +117,30 @@
                 }
             },
 
-            addGoodToBasket(idx) {
-                basket.goods.push(this.goods[idx]);
+            addGoodToBasket(event) {
+                if (!event.target.classList.contains('goodButton')) return;
+                const id_product = +event.target.dataset.id_product;
+                const goodToAdd = this.goods.find(goodToBasket => goodToBasket.id_product === id_product);
+                if (goodToAdd) {
+                    const check = basket.goods.find(checkGood => checkGood.id_product === id_product);
+                    if (check) {
+                        alert('Товар уже есть в корзине')
+                    } else {
+                        basket.goods.push({ ...goodToAdd });
+                    }
+                }
                 basket.init();
             },
         }
+        // <input type="button" name="Удалить" value="Delete" class="button"  onclick="basket.delGoodToBasket(${basket.goods.indexOf(good)});">
         const basketItem = {
             render(good) {
                 return `<div class="basket_good">
             <div><b>Наименование</b>: ${good.product_name}</div>
             <div><b>Цена за шт.</b>: ${good.price}</div>
             <div><b>Количество</b>: ${good.quantity = 1}</div>
-            <input type="button" name="Удалить" value="Delete" class="button"  onclick="basket.delGoodToBasket(${basket.goods.indexOf(good)});">
-        </div>`;
+            <button class="goodDelButton" data-id_product="${good.id_product}">Удалить</button>
+            </div>`;
                 // /* <div><b>Стоимость</b>: ${good.quantity * good.price}</div> */
             }
         }
@@ -129,8 +150,13 @@
             goods: [],
             init() {
                 this.basketListBlock = document.querySelector('.basket-list');
+                this.addEventHandlers();
                 this.render();
             },
+            addEventHandlers() {
+                this.basketListBlock.addEventListener('click', event => this.delBasket(event));
+            },
+
             render() {
                 if (this.goods.length) {
                     this.basketListBlock.textContent = '';
@@ -146,14 +172,20 @@
             basketPrice() {
                 return this.goods.reduce((total, good) => total += good.price, 0);
             },
-            delGoodToBasket(idx) {
-                this.goods.splice(this.goods[idx], 1);
+
+            delBasket(event) {
+                if (!event.target.classList.contains('goodDelButton')) return;
+                const id_product = +event.target.dataset.id_product;
+                const goodOff = this.goods.find(product => product.id_product === id_product);
+                if (goodOff) {
+                    this.goods.splice(this.goods.indexOf(goodOff), 1);
+                };
                 basket.init();
             },
         };
 
         catalog.init();
-        basket.init();
+        basket.init('clr-cart');
     </script>
 </body>
 
